--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,6 @@
--e __pycache__\\ndb.sqlite3\\n.DS_Store\\nlocal_settings.py 
+venv_ryugakuotaku
+__pycache__
+staticfiles
+local_settings.py
+db.sqlite3
+*.py[co]
