--- a/requirements.txt
+++ b/requirements.txt
@@ -4,10 +4,16 @@ dj-database-url==0.5.0
 Django==3.2.5
 django-heroku==0.3.1
 gunicorn==20.1.0
+numpy==1.21.0
+pandas==1.3.0
 pip==21.1.3
 psycopg2==2.8.6
+pyDOE==0.3.8
+python-dateutil==2.8.1
 pytz==2021.1
+scipy==1.7.0
 setuptools==52.0.0
+six==1.16.0
 sqlparse==0.4.1
 typing-extensions==3.10.0.0
 wheel==0.36.2
